--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -10,6 +10,12 @@
   --ui-radius: 0.5rem;
 }
 
+html.dark .tiptap .shiki,
+html.dark .tiptap .shiki span {
+  color: var(--shiki-dark) !important;
+  background-color: var(--ui-bg-muted) !important;
+}
+
 .dark {
   --ui-bg: black;
 }
